Updated HTML structure and content

--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
             <div class="card">
                 <!-- card images  -->
                 <div class="images">
-                    <img src="./images/img-1.jpg" alt="">
+                    <img src="./images/aswint.jpeg" alt="">
                 </div>
                 <!-- card info  -->
                 <div class="info">
-                    <h2>person name</h2>
-                    <p>professional forester</p>
+                    <h2>Aswint Guha</h2>
+                    <p>Student</p>
 
                     <!-- card icons  -->
                     <div class="icons">
@@ -166,12 +166,12 @@
             <div class="card">
                 <!-- card images  -->
                 <div class="images">
-                    <img src="./images/img-2.jpg" alt="">
+                    <img src="./images/buddhaditya.jpeg" alt="">
                 </div>
                 <!-- card info  -->
                 <div class="info">
-                    <h2>person name</h2>
-                    <p>professional forester</p>
+                    <h2>Budhaditya Ghosh</h2>
+                    <p>Student</p>
 
                     <!-- card icons  -->
                     <div class="icons">
@@ -186,12 +186,12 @@
             <div class="card">
                 <!-- card images  -->
                 <div class="images">
-                    <img src="./images/img-3.jpg" alt="">
+                    <img src="./images/reyan.jpeg" alt="">
                 </div>
                 <!-- card info  -->
                 <div class="info">
-                    <h2>person name</h2>
-                    <p>professional forester</p>
+                    <h2>Reyan Chakravorty</h2>
+                    <p>Student</p>
 
                     <!-- card icons  -->
                     <div class="icons">
@@ -206,12 +206,12 @@
             <div class="card">
                 <!-- card images  -->
                 <div class="images">
-                    <img src="./images/img-4.jpg" alt="">
+                    <img src="./images/anik.jpeg" alt="">
                 </div>
                 <!-- card info  -->
                 <div class="info">
                     <h2>person name</h2>
-                    <p>professional forester</p>
+                    <p>Student</p>
 
                     <!-- card icons  -->
                     <div class="icons">
